--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
         "drupal/core-recommended": "^9.2",
         "pantheon-systems/drupal-integrations": "^9",
         "cweagans/composer-patches": "^1.7",
-        "drush/drush": "^11 || ^12"
+        "drush/drush": "^11 || ^12",
+        "drupal/admin_toolbar": "^3.3",
+        "drupal/paragraphs": "^1.15",
+        "drupal/restui": "^1.21"
     },
     "require-dev": {
         "drupal/core-dev": "^9.2"
@@ -81,7 +84,7 @@
         "preferred-install": "dist",
         "sort-packages": false,
         "platform": {
-            "php": "7.4"
+            "php": "8.1.13"
         },
         "allow-plugins": {
             "composer/installers": true,
