--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "drupal/admin_toolbar": "^3.3",
         "drupal/paragraphs": "^1.15",
         "drupal/restui": "^1.21",
-        "drupal/devel_kint_extras": "^1.1"
+        "drupal/devel_kint_extras": "^1.1",
+        "drupal/metatag": "^1.22"
     },
     "require-dev": {
         "drupal/core-dev": "^9.2"
