--- a/web/themes/custom/my_theme/my_theme.libraries.yml
+++ b/web/themes/custom/my_theme/my_theme.libraries.yml
@@ -3,13 +3,13 @@ global-styling:
   version: 1.0
   css:
     base:
-      dist/css/style.css: {}
+      build/css/style.css: {}
       react_app/build/static/css/main.css: {}
 
 global-scripts:
   version: 1.0
   js:
-    dist/js/index.js: {}
+    build/js/index.js: {}
     react_app/build/static/js/main.js: {minified: true}
     "http://localhost:3000/static/js/bundle.js":
       { type: external, minified: true, async: true }
